--- a/homework/Gr11Review/HW_07_Gr11Review/twoPowerTable.html
+++ b/homework/Gr11Review/HW_07_Gr11Review/twoPowerTable.html
@@ -1,19 +1,20 @@
-<html><head>
+<html lang="en"><head>
 <title>Powers of Two</title>
 </head>
 <body>
-<table border cellpadding=5>
-<tr><th>Exponent</th><th>Power of 2</th></tr>
-<tr><td>0</td><td>1</td></tr>
-<tr><td>1</td><td>2</td></tr>
-<tr><td>2</td><td>4</td></tr>
-<tr><td>3</td><td>8</td></tr>
-<tr><td>4</td><td>16</td></tr>
-<tr><td>5</td><td>32</td></tr>
-<tr><td>6</td><td>64</td></tr>
-<tr><td>7</td><td>128</td></tr>
-<tr><td>8</td><td>256</td></tr>
-<tr><td>9</td><td>512</td></tr>
-<tr><td>10</td><td>1024</td></tr>
+<table style="border: 1px solid"><tr><th style="border: 1px solid">Exponent</th><th style="border: 1px solid">Power of 2</th></tr>
+<tr><td style="border: 1px solid">0</td><td style="border: 1px solid">1</td></tr>
+<tr><td style="border: 1px solid">1</td><td style="border: 1px solid">2</td></tr>
+<tr><td style="border: 1px solid">2</td><td style="border: 1px solid">4</td></tr>
+<tr><td style="border: 1px solid">3</td><td style="border: 1px solid">8</td></tr>
+<tr><td style="border: 1px solid">4</td><td style="border: 1px solid">16</td></tr>
+<tr><td style="border: 1px solid">5</td><td style="border: 1px solid">32</td></tr>
+<tr><td style="border: 1px solid">6</td><td style="border: 1px solid">64</td></tr>
+<tr><td style="border: 1px solid">7</td><td style="border: 1px solid">128</td></tr>
+<tr><td style="border: 1px solid">8</td><td style="border: 1px solid">256</td></tr>
+<tr><td style="border: 1px solid">9</td><td style="border: 1px solid">512</td></tr>
+<tr><td style="border: 1px solid">10</td><td style="border: 1px solid">1024</td></tr>
+<tr><td style="border: 1px solid">11</td><td style="border: 1px solid">2048</td></tr>
+<tr><td style="border: 1px solid">12</td><td style="border: 1px solid">4096</td></tr>
 </table>
 </body></html>
